--- a/style.css
+++ b/style.css
@@ -12,11 +12,15 @@ body {
       background: #222;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 0 20px #0f0;
+      box-shadow: 0 0 10px rgb(116, 116, 116);
       text-align: center;
       max-width: 600px;
       width: 100%;
-    }
+      -webkit-border-radius: 15px;
+      -moz-border-radius: 15px;
+      -ms-border-radius: 15px;
+      -o-border-radius: 15px;
+}
     .question {
       font-size: 1.3rem;
       margin: 20px 0;
@@ -31,7 +35,7 @@ body {
       transition: 0.2s;
     }
     .option:hover {
-      background: #0f0;
+      background: rgb(92, 152, 92);
       color: #000;
     }
     #timer {
