--- a/quiz.css
+++ b/quiz.css
@@ -18,30 +18,31 @@ body {
 
 .quiz-box {
   background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(12px);
-  padding: 40px 30px 30px 30px;
+  backdrop-filter: blur(15px);
+  padding: 40px 30px ;
   border-radius: 20px;
   width: 90%;
   max-width: 500px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   text-align: center;
   animation: fadeIn 0.6s ease;
+  
 }
 
 .quiz-box h1 {
-  font-size: 1.6rem;
+  font-size: 30px;
   margin-bottom: 20px;
   color: #ffe082;
 }
 
 #timer {
-  font-size: 1.1rem;
+  font-size: 20px;
   margin-bottom: 15px;
   color: #b2ebf2;
 }
 
 #question {
-  font-size: 1.2rem;
+  font-size: 25px;
   margin-bottom: 20px;
 }
 
@@ -68,7 +69,7 @@ body {
 
 #result {
   margin-top: 20px;
-  font-size: 1.2rem;
+  font-size: 25px;
   color: #fff;
 }
 
@@ -80,7 +81,7 @@ body {
 }
 
 a {
-  display: inline-block;
+  display: inline;
   margin-top: 20px;
   color: #fff;
   background: rgba(255, 255, 255, 0.2);
@@ -106,3 +107,4 @@ a:hover {
     transform: translateY(0);
   }
 }
+/* Animasi halus pas muncul */
